<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>au.edu.eq</groupId>
	<artifactId>exam-question-bank</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Exam Question Bank</name>
	<properties>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
		<junit.version>6.0.3</junit.version>
		<maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
		<javafx.version>25.0.4</javafx.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>3.0.8</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<argLine>
						--add-opens
						au.edu.eq.questionbank/au.edu.eq.questionbank=ALL-UNNAMED
						--add-opens
						au.edu.eq.questionbank/au.edu.eq.questionbank.model=ALL-UNNAMED
						--add-opens
						au.edu.eq.questionbank/au.edu.eq.questionbank.pdf=ALL-UNNAMED
						--add-opens
						au.edu.eq.questionbank/au.edu.eq.questionbank.repository`=ALL-UNNAMED
						--add-opens
						au.edu.eq.questionbank/au.edu.eq.questionbank.output=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
